# aws-python-facts

./: .gitignore  README.md  pyproject.toml  serverless.yml
.github/workflows/: deploy.yaml
