[tool.poetry]
name = "aws-python-facts"
version = "0.1.0"
description = ""
authors = ["earlyr1 <earlyr@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
